infra/sandbox/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-proxy-svc
  namespace: anvilops-dev
spec:
  selector:
    app: app-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
type: ClusterIP
