infra/sandbox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox-ingress
  namespace: anvilops-dev
  labels:
    app.kubernetes.io/name: ingress-sandbox
    app.kubernetes.io/instance: dev
    app.kubernetes.io/version: 0.0.1
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: anvilops
    app.kubernetes.io/managed-by: fluxcd
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.anvilops.rcac.purdue.edu"
      secretName: tls-cert
  rules:
    - host: "*.anvilops.rcac.purdue.edu"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-proxy-svc
                port:
                  number: 80
